; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-y-data.c_do_set_rate_new.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-y-data.c_do_set_rate_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_search_set_rate_new = type { i64 }

@LEV_SEARCH_SET_RATE_NEW = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_set_rate_new(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.lev_search_set_rate_new*, align 8
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @fits(i64 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %27

13:                                               ; preds = %3
  %14 = load i64, i64* @LEV_SEARCH_SET_RATE_NEW, align 8
  %15 = load i32, i32* %6, align 4
  %16 = sext i32 %15 to i64
  %17 = add nsw i64 %14, %16
  %18 = load i32, i32* %7, align 4
  %19 = call %struct.lev_search_set_rate_new* @alloc_log_event(i64 %17, i32 16, i32 %18)
  store %struct.lev_search_set_rate_new* %19, %struct.lev_search_set_rate_new** %8, align 8
  %20 = load i64, i64* %5, align 8
  %21 = load %struct.lev_search_set_rate_new*, %struct.lev_search_set_rate_new** %8, align 8
  %22 = getelementptr inbounds %struct.lev_search_set_rate_new, %struct.lev_search_set_rate_new* %21, i32 0, i32 0
  store i64 %20, i64* %22, align 8
  %23 = load i64, i64* %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @set_rate_new(i64 %23, i32 %24, i32 %25)
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %13, %12
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @fits(i64) #1

declare dso_local %struct.lev_search_set_rate_new* @alloc_log_event(i64, i32, i32) #1

declare dso_local i32 @set_rate_new(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
